crates/libs/frieze-macros/tests/ui/maybe_missing_skip.stderr
error: frieze: `Maybe<T>` field `avatar_url` requires both `#[serde(default)]` and `#[serde(skip_serializing_if = "Maybe::is_missing")]`. Add: #[serde(default, skip_serializing_if = "Maybe::is_missing")]
 --> tests/ui/maybe_missing_skip.rs:8:17
  |
8 |     avatar_url: Maybe<String>,
  |                 ^^^^^^^^^^^^^
